fix format celphone number

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<img src="assets/img/ju.png" alt="Foto Juliana">
 					<h2>Juliana Fernandez Lima</h2>
 					<h4 class="contact" >julianafernandezlima@hotmail.com</h4>
-					<h4 class="contact">+34 62417-8469</h4>
+					<h4 class="contact">+34 624 178 469</h4>
 					<nav id="redes-sociais">
 						<ul>
 							<li>
